Fix: update Gantt color and CSS wrapping 2

--- a/src/styles/Pages.css
+++ b/src/styles/Pages.css
@@ -29,6 +29,16 @@
     background-color: #ffffff;
   }
 
+  .issue-description-2 {
+    white-space: normal;
+    word-wrap: break-word;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    line-height: 1.5;
+    padding: 4px 8px;
+    max-width: 100%;
+  }
+
   .section-title-summary-report {
     font-size: 1.25rem;
     font-weight: bold;
@@ -215,10 +225,11 @@
   .summary-card-report {
     background: white;
     border-radius: 8px;
-    height: 180px;
+    height: 210px;
     padding: 1rem;
     box-shadow: 0 0 10px rgba(0,0,0,0.15);
-    max-width: 200px;
+    max-width: 300px;
+    min-width: 200px;
   }
 
 
@@ -501,7 +512,7 @@
     position: relative;
     background: #f5f5f5;
     padding: 0.2rem 1rem;
-    max-width: 130px;
+    max-width: 100px;
     text-align: center;
     border-radius: 6px 0 0 6px; /* rounded left side only */
     margin-right: 10px;
@@ -517,7 +528,7 @@
     width: 0;
     height: 0;
     border-top: 37px solid transparent;
-    border-bottom: 23px solid transparent;
+    border-bottom: 42px solid transparent;
     border-left: 10px solid #f5f5f5; /* same as background */
   }
 
@@ -538,7 +549,7 @@
     width: 0;
     height: 0;
     border-top: 37px solid transparent;
-    border-bottom: 23px solid transparent;
+    border-bottom: 42px solid transparent;
     border-left: 10px solid #5cb85c; /* same as background */
   }
   
@@ -587,6 +598,20 @@
   }
   .stage-tag:hover {
     background-color: #005eb8;
+  }
+
+  .stage-tag-stages-2 {
+    background-color: #f4545c;
+    color: white;
+    padding: 0.4rem 0.75rem;
+    border-radius: 16px;
+    font-weight: bold;
+    font-size: 10px;
+    display: inline-block;
+  }
+
+  .stage-tag-stages-2:hover {
+    background-color: #f48c94;
   }
 
 
